--- a/CacheService/pom.xml
+++ b/CacheService/pom.xml
@@ -82,7 +82,9 @@
                             <transformers>
                                 <!-- add Main-Class to manifest file -->
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"/>
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>mw.cache.MWCache</mainClass>
+                                </transformer>
                             </transformers>
                         </configuration>
                     </execution>
