--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-
+*.dat
+*.dump
+*.list
 
 */dependency-reduced-pom.xml
