--- a/ZooKeeper/pom.xml
+++ b/ZooKeeper/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>registryaccess</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+	<dependency>
+	    <groupId>org.zab</groupId>
+            <artifactId>zab</artifactId>
+	    <version>1.0</version>
+	</dependency>
     </dependencies>
 
     <build>
